--- a/window.html
+++ b/window.html
@@ -235,6 +235,25 @@
                     <div>
                         <h4>Model Talk</h4>
                     </div>
+
+
+
+                    <div class="live2d-parameter">
+                        <div class="live2d-parameter-title">
+                            <label for="live2d_tts_lip_sync_checkbox">TTS Lip Sync</label>
+                        </div>
+                        <div class="live2d-slider-div">
+                            <label class="checkbox_label" for="live2d_tts_lip_sync_checkbox">
+                                <input type="checkbox" id="live2d_tts_lip_sync_checkbox" name="live2d_tts_lip_sync_checkbox">
+                                <small>Enable audio-based mouth sync (requires TTS)</small>
+                            </label>
+                        </div>
+                    </div>
+
+
+
+
+
                     <div class="live2d-parameter">
                         <div class="live2d-parameter-title">
                             <label for="live2d_model_param_mouth_open_y_select">
